History
=======

Version 0.6.6 - Unreleased
--------------------------

Version 0.6.5 - 2008-11-05
--------------------------

- Used ``i18ndude`` to find all untranslated msgid's. Some line-numbers were
  corrected, but nothing changed in ``collective.singing``.  There were some
  updates in collective.dancing, so all guy's please help updating 
  collective.dancing's po files.  [saily]

- Add ``async`` module that allows to queue jobs for asynchronous
  execution.  Creating this was necessary because ``zc.async`` is not
  available for all Zope versions that ``collective.dancing`` aims to
  work with.  :-( [nouri]

- Allow for more finer grained control of cue in
  ``IMessageAssemble.render_message``.  This allows a preview function
  to request the cue to be used but not to be set when rendering a
  preview. [nouri]

Version 0.6.4 - 2008-10-29
--------------------------

- Added optional checking for channel attr 'sendable' to
  channel_lookup. Sending of a content item from the
  sendnewsletter view in dancing uses this feature, to be able
  to supress some channels. Also added vocabularies that contain
  only sendable or only subscribeable channels.
  [tmog]

- Relabelled buttons on the stats page to use the term 'clear' rather
  than 'flush'. Also renamed related handlers and method. [russf]


Version 0.6.3 - 2008-09-11
--------------------------

- Register the SubscriptionSearchableText adapter so that the fulltext
  index is actually populated. [nouri]

Version 0.6.2 - 2008-09-03
--------------------------

- Add 'headers' argument to ``mail.create_html_mail`` to allow the
  injection of more e-mail headers. [nouri]

Version 0.6.1 - 2008-08-28
--------------------------

- Add zope.sendmail as a dependency so that we get the latest and
  greates release. [nouri]

- IMailDelivery expects ``toaddrs`` to be a list of addresses. [nouri]

- Use DumbWriters word wrapping to ensure that no text line
  is longer than plain_text_maxcols characters. [saily]
